koa模型核心代码完成

--- a/redux/基础函数.md
+++ b/redux/基础函数.md
@@ -81,3 +81,18 @@ compose(mid1, mid2)(ctx).then(res => {
   console.log('compose', ctx, res)
 })
 ```
++ 传入的函数是不定数量
+```js
+  function compose(...arr) {
+  return (ctx) => {
+    function dispatch(i) {
+      if (i === arr.length) return Promise.resolve(null)
+      return Promise.resolve(arr[i](ctx, () => {
+        return dispatch(++i)
+      }))
+    }
+    return dispatch(0)
+  }
+}
+
+```
