--- a/网络/1.网络面试清单.md
+++ b/网络/1.网络面试清单.md
@@ -1,13 +1,30 @@
-+ 讲讲TCP三次握手、四次挥手，为什么要三次握手、四次挥手？
-+ TCP和UDP区别是什么？
-+ 说说从输入url到页面展示出来的整个过程
-+ 什么是跨域？为什么会出现跨域？如何解决跨域问题？jsonp原理 是什么？
-+ http各版本的改进都是什么？
-+ https原理是什么？为什么可以保证安全性？
-+ http常见状态码有哪些？
-+ http有哪些方法？
-+ get和post区别是什么？
-+ 讲讲http缓存机制。
-+ cdn是什么？它的原理是什么？
-+ 讲讲304协商缓存过程。
-+ 浏览器有哪些缓存？localStorage、sessionStorage、cookie的、session的区别是什么？
+### 讲讲TCP三次握手、四次挥手，为什么要三次握手、四次挥手？
+###  TCP和UDP区别是什么？
+###  说说从输入url到页面展示出来的整个过程
++ 浏览器判断缓存，直接拿缓存
+- 如果强缓存生效，则直接从浏览器缓存获取资源
+- 协商缓存，发起http连接，服务器检查资源是否更改，没则返回304告诉客户端那缓存，反之则返回资源。
++ 本地hosts文件、hosts缓存、本地dns、根dns、顶级域名dns到权威域名dns服务，让客户端拿到ip地址
++ 获取mac地址，通过将 IP 地址与本机的子网掩码相与，判断是否在同一个子网，如果在同一个子网
+，使用 APR 协议获取到目的主机的 MAC 地址，反之通过 ARP 协议来获取网关的 MAC 地址，让网关去转发
++ 建立tcp链接三次握手
++ 发起http请求
++ 服务器响应http请求
++ 浏览器拿到html文件进行解析
++ 解析html生产domTree,css解释器解析css生产cssOm,两棵树合成一个renderTree，然后再进行布局计算，最后绘制。那么cssom树的构建和dom树的构建是并行的，CSSOM会阻塞js的执行和js会阻塞dom的解析。
++ tcp四次挥手断开连接
+### 如果是外部 JavaScript 文件，浏览器必须停下来，等待从磁盘、缓存或远程服务器获取脚本，这就可能给关键渲染路径增加数十至数千毫秒的延迟
++ 脚本在文档中的位置很重要。
++ JavaScript 执行将暂停，直至 CSSOM 就绪。因此CSS是会阻塞js的执行的，而js执行又会阻塞dom的构建。
+### defer和defer的script的区别
+<img src="https://upload-images.jianshu.io/upload_images/14923653-87958743cae248f5.png?imageMogr2/auto-orient/strip|imageView2/2/w/688/format/webp"/>
+###  什么是跨域？为什么会出现跨域？如何解决跨域问题？jsonp原理 是什么？
+###  http各版本的改进都是什么？
+###  https原理是什么？为什么可以保证安全性？
+###  http常见状态码有哪些？
+###  http有哪些方法？
+###  get和post区别是什么？
+###  讲讲http缓存机制。
+###  cdn是什么？它的原理是什么？
+###  讲讲304协商缓存过程。
+###  浏览器有哪些缓存？localStorage、sessionStorage、cookie的、session的区别是什么？
