--- a/react/1.常见问法.md
+++ b/react/1.常见问法.md
@@ -1,2 +1,14 @@
 ### hooks和class的优劣
 
+hooks的优势
++ hooks的写法更加简洁
++ 业务代码更加聚合（如组件对外部的订阅与取消订阅都是放在同一个effect里面）
++ 状态逻辑复用更加直观易维护，对比hoc和render prop，前者可以通过容器组件给组件复用状态逻辑，后者则是直接通过自定hooks去复用状态逻辑
+hooks的劣势
++ useMemo和useCallback的依赖项随着组件负责会带来心智负担。
+
+
+### hooks的原理概述
+function 组件不能做继承，因为 function 本来就没这个特性，所以是提供了一些 api 供函数使用，这些 api 会在内部的一个数据结构上挂载一些函数和值，并执行相应的逻辑，通过这种方式实现了 state 和类似 class 组件的生命周期函数的功能，这种 api 就叫做 hooks。
+hooks 挂载数据的数据结构叫做 fiber
+
