--- a/react/1.常见问法.md
+++ b/react/1.常见问法.md
@@ -4,11 +4,21 @@ hooks的优势
 + hooks的写法更加简洁
 + 业务代码更加聚合（如组件对外部的订阅与取消订阅都是放在同一个effect里面）
 + 状态逻辑复用更加直观易维护，对比hoc和render prop，前者可以通过容器组件给组件复用状态逻辑，后者则是直接通过自定hooks去复用状态逻辑
++ 屏蔽this的负担
 hooks的劣势
 + useMemo和useCallback的依赖项随着组件负责会带来心智负担。
-
-
 ### hooks的原理概述
 function 组件不能做继承，因为 function 本来就没这个特性，所以是提供了一些 api 供函数使用，这些 api 会在内部的一个数据结构上挂载一些函数和值，并执行相应的逻辑，通过这种方式实现了 state 和类似 class 组件的生命周期函数的功能，这种 api 就叫做 hooks。
 hooks 挂载数据的数据结构叫做 fiber
 
+
+### jsx和Fiber有什么关系
++ mount时通过jsx对象（调用createElement的结果）调用createFiberFromElement生成Fiber update时通过reconcileChildFibers或reconcileChildrenArray对比新jsx和老的Fiber（current Fiber）生成新的wip Fiber树
+
+### react17之前jsx文件为什么要声明import React from 'react'，之后为什么不需要了
++ jsx经过编译之后编程React.createElement，不引入React就会报错，react17改变了编译方式，变成了jsx.createElement
+
+### Fiber是什么，它为什么能提高性能
++ Fiber双缓存可以在构建好wip Fiber树之后切换成current Fiber，内存中直接一次性切换，提高了性能
++ Fiber的存在使异步可中断的更新成为了可能，作为工作单元，可以在时间片内执行工作，没时间了交还执行权给浏览器，下次时间片继续执行之前暂停之后返回的Fiber
++ Fiber可以在reconcile的时候进行相应的diff更新，让最后的更新应用在真实节点上
