--- a/react/4. requestIdleCallback与eventloop.md
+++ b/react/4. requestIdleCallback与eventloop.md
@@ -76,3 +76,26 @@ window.requestIdleCallback = function(callback) {
 	})
 }
 ```
+
+### fiber架构概述
++ Fiber的另外一种解读是’纤维‘: 这是一种数据结构或者说执行单元。我们暂且不管这个数据结构长什么样，🔴将它视作一个执行单元，每次执行完一个'执行单元', React 就会检查现在还剩多少时间，如果没有时间就将控制权让出去.
++ 为代码如下
+```js
+  updateQueue.push(updateTask);
+  requestIdleCallback(performWork, {timeout});
+
+  // 1️⃣ performWork 会拿到一个Deadline，表示剩余时间
+  function performWork(deadline) {
+
+    // 2️⃣ 循环取出updateQueue中的任务
+    while (updateQueue.length > 0 && deadline.timeRemaining() > ENOUGH_TIME) {
+      workLoop(deadline);
+    }
+
+    // 3️⃣ 如果在本次执行中，未能将所有任务执行完毕，那就再请求浏览器调度
+    if (updateQueue.length > 0) {
+      requestIdleCallback(performWork);
+    }
+  }
+```
++ workLoop 的工作大概猜到了，它会从更新队列(updateQueue)中弹出更新任务来执行，每执行完一个‘执行单元‘，就检查一下剩余时间是否充足，如果充足就进行执行下一个执行单元，反之则停止执行，保存现场，等下一次有执行权时恢复:
