--- a/react/4.react中的requestIdleCallback 实现以及引发eventloop与浏览器渲染机制的思考.md
+++ b/react/4.react中的requestIdleCallback 实现以及引发eventloop与浏览器渲染机制的思考.md
@@ -3,3 +3,11 @@
 ### react 为什么要做自己实现requestIdleCallback 
 <https://juejin.cn/post/7021506472232583199>
 ### 思考setTimeout里面操纵dom没有requestanimationframe的流畅呢
+
+
+### 司徒正美的Fiber
+<https://zhuanlan.zhihu.com/p/37095662>
+
+
+### react-fiber概述
+<https://juejin.cn/post/6844903975112671239#%E5%8D%95%E5%A4%84%E7%90%86%E8%BF%9B%E7%A8%8B%E8%B0%83%E5%BA%A6-fiber-%E4%B8%8D%E6%98%AF%E4%B8%80%E4%B8%AA%E6%96%B0%E7%9A%84%E4%B8%9C%E8%A5%BF>
