--- a/react/4.react中的requestIdleCallback 实现以及引发eventloop与浏览器渲染机制的思考.md
+++ b/react/4.react中的requestIdleCallback 实现以及引发eventloop与浏览器渲染机制的思考.md
@@ -11,3 +11,7 @@
 
 ### react-fiber概述
 <https://juejin.cn/post/6844903975112671239#%E5%8D%95%E5%A4%84%E7%90%86%E8%BF%9B%E7%A8%8B%E8%B0%83%E5%BA%A6-fiber-%E4%B8%8D%E6%98%AF%E4%B8%80%E4%B8%AA%E6%96%B0%E7%9A%84%E4%B8%9C%E8%A5%BF>
+
+
+### 如何阐述旧react和fiber的react的变化,以及整个react的工作机制，太牛逼了
+<https://juejin.cn/post/6844903582622285831>
