移动端适配问题就此告一段落

--- a/移动端适配/2.1px问题以及为什么需要2倍图3倍图.md
+++ b/移动端适配/2.1px问题以及为什么需要2倍图3倍图.md
@@ -5,14 +5,15 @@
 ### 解决1px问题的救命良药
 <https://jelly.jd.com/article/60dc262a78b202017b299257>
 #### 移动端适配1px问题阐述
-+ 我们使用rem做适配的时候，750px为比例基准的时候，画一个边框为1px盒子,在345px的设备上，通过rem换算会得到0.5px的盒子。
++ 我们使用rem做适配的时候，750px为比例基准的时候，画一个边框为1px盒子,在345px的设备上，通过rem换算会得到0.5px的盒子(测试严格要求在逻辑像素为345px的设备上画一个0.5px(逻辑像素)的线，dpr为2的情况下为1pt物理像素)。
 + 由于不同设备的浏览器不同，而不同的浏览器对于小于1px的处理方式不同。比如火狐对于小于1px的都当作0.5px处理，谷歌对于小于1px都是1px，导致在不同设备上1px的表现各不相同，这就是1px的兼容问题。本质就是浏览器无法识别小数点的px问题
 
 
 #### 解决方案
 + 将伪元素设置绝对定位，并且和父元素的左上角对齐，为了只缩放 border 1px 的粗细，而保证 border 的大小不变，将width、hegiht 设置200%，缩小0.5倍。
 + 利用vw,vh?利用浏览器能识别小数点的vw,vh。（项目实验）
-+ 动态 viewport + rem方案（不太懂），就是改变设备的逻辑像素，让他变大或者变小以此适应1px。
++ 动态 viewport + rem方案（不太懂），就是改变设备的逻辑像素，让他变大或者变小以此适应1px，让rem换算后的边框永远都是大于1px的，详情可看<https://www.51cto.com/article/712496.html>
++ 直接写1px
 ```js
   var viewport = document.querySelector("meta[name=viewport]");
     //下面是根据设备像素设置viewport
