错别字更正

--- a/react/2.dom-diff.md
+++ b/react/2.dom-diff.md
@@ -17,9 +17,10 @@ pre {
 #### react回拿现有的fiber树和render函数返回react element对象进行diff
 
 + 单节点更新(即render函数重新生成的elemen tree只有一个节点)、单节点增删。
-  - 单节点就是便利旧fiber节点，判断是否key type相同，不相同就打上删除的标记。
+  - 单节点就是遍历旧fiber节点，判断是否key type相同，不相同就打上删除的标记。
 
-+ 多节点有四种可能性：节点更新、新增节点、删除节点、节点移动四种组合，diff算法会经历三轮便利newchildren。
++ 多节点有四种可能性：节点更新、新增节点、删除节点、节点移动四种组合，diff算法会经历三轮遍历
+newchildren。
 + 第一轮主要是针对属性更新的，因为实际上在平时的实践中，节点自身的更新是最多的。剩下的两轮依次处理节点的新增、移动。
 
 ``` ts
