hook原理重新认识

--- a/react/7.hooks原理.md
+++ b/react/7.hooks原理.md
@@ -1,27 +1,35 @@
-### 第一节 环状链表
-React 使用环状链表保存更新队列 queue={ pending: null }，其中 pending 永远指向最后一个更新。比如多次调用 setState 时：
+### 第一节 hook数据结构：hook 链表保存在 fiber 节点的 memoizedState 属性上。
++ 初次渲染调用 mountWorkInProgressHook 构建 hook 链表。更新渲染调用 updateWorkInProgressHook 构建 hook 链表并复用上一次的 hook 状态信息
++ useContext是唯一一个不需要添加到 hook 链表的 hook 函数
++ 只有 useEffect、useLayoutEffect 以及 useImperativeHandle 这三个 hook 具有副作用，在 render 阶段需要给函数组件 fiber 添加对应的副作用标记。同时这三个 hook 都有对应的 effect 对象保存其状态信息
++ 每次渲染都是重新构建 hook 链表以及 收集 effect list(fiber.updateQueue)
 
-```js
-const [count, setCount] = useReducer(reducer, 0);
-setCount(1); // 生成一个更新对象：update1 = { action: 1, next: update1 }
-setCount(2); // 生成一个更新对象：update2 = { action: 2, next: update1 }
-```
-### 什么是 hook 链表
-React 每次执行到 hook 函数时，都会构造一个 hook 对象，并连接成一个链表
-```js
-const [count, setCount] = useReducer(reducer, 0); // 构造一个hook对象 hook1 = { memoizedState: 0, queue: { pending: null }, next: hook2 }
-const [count2, setCount2] = useReducer(reducer, 1000); // 构造一个hook对象 hook2 = { memoizedState: 1000, queue: { pending: null }, next: hook3 }
-useEffect(() => {
-  // 构造一个hook对象，hook3 = { memoizedState: { create: callback }, next: null}
-  console.log("useEffect");
-  .+-+--+++08041  
-}, []);
-```
-**_注意！！！函数组件中，组件对应的 fiber 节点也有一个 memoizedState 属性，fiber.memoizedState 用于保存组件的 hook 链表_**
+### fiber与hook有关：memoizedState 和updateQueue 属性
++ memoizedState 属性用于保存 hook 链表，hook 链表是单向链表，每个hook对象通过next指向下一个。
++ updateQueue 属性用于保存useEffect、useLayoutEffect、useImperativeHandle这三个 hook 的 effect 信息，是一个环状链表，其中 updateQueue.lastEffect 指向最后一个 effect 对象。effect 描述了 hook 的信息，比如useLayoutEffect 的 effect 对象保存了监听函数，清除函数，依赖等
 
-### hook函数为什么可以保留信息
-React 为我们提供的以use开头的函数就是 hook，本质上函数在执行完成后，就会被销毁，然后状态丢失。React 能记住这些函数的状态信息的根本原因是，在函数组件执行过程中，React 会为每个 hook 函数创建对应的 hook 对象，然后将状态信息保存在 hook 对象中，在下一次更新渲染时，会从这些 hook 对象中获取上一次的状态信息。
-### 初次渲染和更新渲染执行 hook 函数的区别在于：
-+   构建 hook 链表的算法不同。初次渲染只是简单的构建 hook 链表。而更新渲染会遍历上一次的 hook 链表，构建新的 hook 链表，并复用上一次的 hook 状态
+
+### hook 对象及其属性介绍
+```js
+  var hook = {
+  memoizedState,,
+  baseState,
+  baseQueue,
+  queue,
+  next,
+};
+```
+### useState Hook 对象
++ hook.memoizedState 保存的是 useState 的 state 值。比如 const [count, setCount] = useState(0)中，memoizedState 保存的就是 state 的值
++ hook.queue 保存的是更新队列，是个环状链表。它会保存你多次setState的信息，在 render 阶段，会遍历 hook.queue，计算最终的 state 值，并存入 hook.memoizedState 中
+
+### useRef Hook
++ hook.memoizedState 保存的是 ref 的值
+### useEffect、useLayoutEffect 以及 useImperativeHandle
++ memoizedState 保存的是一个 effect 对象，effect 对象保存的是 hook 的状态信息，比如监听函数，依赖，清除函数等
++ 此外 effect 对象存到 fiber.updateQueue 中，以便在 commit 阶段遍历 updateQueue
+### useMemo与useCallback
+### hook首次构建与更新构建
++ 构建 hook 链表的算法不同。初次渲染只是简单的构建 hook 链表。而更新渲染会遍历上一次的 hook 链表，构建新的 hook 链表，并复用上一次的 hook 状态（这就是为什么hook不可写在条件判断的原因）
 + 依赖的判断。初次渲染不需要判断依赖。更新渲染需要判断依赖是否变化。
-+ 对于 useState 来说，更新阶段还需要遍历 queue 链表，计算最新的状态。
++ 对于 useState 来说，更新阶段还需要遍历 queue 链表，计算最新的状态
