传输层性能优化

--- a/性能优化篇/总结.md
+++ b/性能优化篇/总结.md
@@ -1,9 +1,9 @@
-## 传输加载优化
+## 1.传输加载优化
 ### GZip:gizp压缩是一种http请求优化方式，通过减少文件体积来提高加载速度
   + 前端工程打包成Gzip,然后nginx开启Gzip模块（一般使用这种）
   + 这种方式直接采用nginx进行Gzip化,通过启动项目查看newwork资源中的请求头是否有【Response Headers-> Content-Encoding:gzip】
 
-### http缓存
+### 1.1HTTP缓存
   + 强制缓存
     - Expires,HTTP1.0 产物,它的值为服务端返回的到期时间，即下一次请求时，请求时间小于服务端返回的到期时间，直接使用缓存数据,服务器和客户端时间不一致，容易出现误差
     - Cache-Control：
@@ -16,3 +16,24 @@
   + 对比缓存
     - Last-Modified / If-Modified-Since：Last-Modified，浏览器之后再请求的时候，会带上一个头：If-Modified-Since，这个值就是服务器上一次给的 Last-Modified 的时间，如果不超时返回304,反之返回资源
     - Etag  /  If-None-Match（优先级高于Last-Modified  /  If-Modified-Since）：通过Etag头部告诉浏览器当前资源在服务器的唯一标识（生成规则由服务器决定），浏览器再次请求时，就会带上一个头If-None-Match，这个值就是服务器上一次给的Etag的值，服务器比对一下资源当前的Etag是否跟If-None-Match一致，
+### 1.2HTTP的性能优化
+  + 资源合并以减少 HTTP 请求数。
+  + 使用h2,多个http请求可以使用同一个tcp连接，h1.1有缺陷，每个tcp只能处理一个http，不能并发发多个请求，虽然存在Pipelining技术支持多个请求同时发送，但存在很多问题
+     - h1.0：送完一个 HTTP 响应后，会断开 TCP 链接，使用connection:keep-alive，h1.1默认connection:keep-alive
+     - h1.1：每个tcp只能处理一个http，不能并发发多个请求，虽然存在Pipelining技术支持多个请求同时发送，但存在很多问题
+     - h2（基于https）：使用h2,多个并发http请求可以使用同一个tcp连接
+  + Chrome 最多允许对同一个 Host 建立六个 TCP 连接,在没有使用h2的情况下，那么尽量将资源分到多个域名下，但也要注意太多域名，域名解析也要时间，所以要平衡去优化
+  + 减少重定向，单个重定向到不同的源会导致 DNS、TCP、TLS 和请求-响应往返。
+  + 消除不必要的请求字节。尽可能少的使用 cookie
+### 1.3静态资源使用cdn
+  + dns解析到全局负载均衡系统
+  + 全局负载均衡系统定向到本地负载均衡系统
+  + 本地负载均衡系统挑选性能较好的服务器
+  + 服务器返回资源或重定向至源服务器
+  + 负载均衡算法：
+    - random随机法
+    - 轮询访问
+    - 随机加权
+### 1.4资源包优化
+  + 减少打包体积
+    - 拆包+Tree Shaking+动态垫片+按需加载+压缩资源
