--- a/性能优化篇/网络层面.md
+++ b/性能优化篇/网络层面.md
@@ -36,4 +36,4 @@
     - 随机加权
 ### 1.4资源包优化
   + 减少打包体积
-    - 拆包+Tree Shaking+动态垫片+按需加载+压缩资源
+    - 拆包+Tree Shaking+动态垫片+按需加载+压缩资源+变量提升(webpack生产模式默认开启，模块直接变为变量声名，减少函数声明)
