--- a/性能优化篇/网络层面.md
+++ b/性能优化篇/网络层面.md
@@ -21,7 +21,7 @@
   + 使用h2,多个http请求可以使用同一个tcp连接，h1.1有缺陷，每个tcp只能处理一个http，不能并发发多个请求，虽然存在Pipelining技术支持多个请求同时发送，但存在很多问题
      - h1.0：送完一个 HTTP 响应后，会断开 TCP 链接，使用connection:keep-alive，h1.1默认connection:keep-alive
      - h1.1：每个tcp只能处理一个http，不能并发发多个请求，虽然存在Pipelining技术支持多个请求同时发送，但存在很多问题
-     - h2（基于https）：使用h2,多个并发http请求可以使用同一个tcp连接
+     - h2（基于https）：使用h2,多个并发http请求可以使用同一个tcp连接，且拥有服务器推送功能，比如浏览器只请求了index.html，但是服务器把index.html，style.css，example.png全部发送给浏览器。
   + Chrome 最多允许对同一个 Host 建立六个 TCP 连接,在没有使用h2的情况下，那么尽量将资源分到多个域名下，但也要注意太多域名，域名解析也要时间，所以要平衡去优化
   + 减少重定向，单个重定向到不同的源会导致 DNS、TCP、TLS 和请求-响应往返。
   + 消除不必要的请求字节。尽可能少的使用 cookie
