--- a/react/9.schedule-concurrent-lane.md
+++ b/react/9.schedule-concurrent-lane.md
@@ -8,9 +8,12 @@
   + root有事件委托，根据不同的事件进而赋予不同。
 ### 
 
-### 任务切片与时间切片
- + 任务切片的缺陷
- + 时间切片的好处
+### 任务切片与时间切片,schedule包的作用
+ + 处理任务的优先级，taskQueue保存任务的优先级，根据最小到期时间expirationTime排序，即早到期早执行。
+ + timerQueue保存延迟任务，延迟任务会在每个taskQueue取出任务执行一次后开启定时器，定时器是把该任务加入taskQueue，定时器时间为延迟时间
 ### concurrent模式下 如何处理插入有先级更高的任务，以及延迟任务的实现
  + schedule用于调度不同优先级，通过taskQueue的时间排序去调度不同优先级，如果taskA正在被render，让出执行权之后，又产生了taskB，且优先级高于A，那么fiber tree将会被重置，先着手执行taskB,执行完B，在从taskQueue取优先级高的出来执行，期间如果加入相同优先级的任务，那么它将会被合并。
  + 如何避免长期饥饿问题，timerQueue保留延迟任务，如果延迟时间到，就会加入taskQueue。
+### startTransition与useTransition与useDeferredValue
+ + lane中的过度任务优先级
+ + useDeferredValue制定延迟时间
