lane架构的补充

--- a/react/9.schedule-concurrent-lane.md
+++ b/react/9.schedule-concurrent-lane.md
@@ -8,7 +8,8 @@
   + root有事件委托，根据不同的事件进而赋予不同。
 ### 
 
-### 任务切片与时间切片,schedule包的作用
+### 时间切片,schedule包的作用
+ + 时间切片：每执行一个fiber完成，会判断时间是否超过5ms,没超过就继续执行下一个fiber，超过就通过message channel注册下一个fiber，相当于把执行权让给浏览器，如果该任务超时了，就不会再让步了，而是一次性把剩余fiber执行render到commit一气呵成。
  + 处理任务的优先级，taskQueue保存任务的优先级，根据最小到期时间expirationTime排序，即早到期早执行。
  + timerQueue保存延迟任务，延迟任务会在每个taskQueue取出任务执行一次后开启定时器，定时器是把该任务加入taskQueue，定时器时间为延迟时间
 ### concurrent模式下 如何处理插入有先级更高的任务，以及延迟任务的实现
@@ -17,3 +18,5 @@
 ### startTransition与useTransition与useDeferredValue
  + lane中的过度任务优先级
  + useDeferredValue制定延迟时间
+### lane模型讲的最好的一篇文章
+<https://zhuanlan.zhihu.com/p/454432618>
