--- a/性能优化篇/实践.md
+++ b/性能优化篇/实践.md
@@ -23,7 +23,13 @@
   + 快速交互，采用TTI。目前为8.0s。
 经过lighthouse分析
   + 首页订单卡片请求图片数量巨大，大小不一，来源不一。
-  + 加载了大量的没有用的代码（没用到的页面组件，没用到的方法库如echarts）
+  + 加载了大量的没有用的代码（大体量的业务组件没做懒加载，）
   + 总加载资源高达8m，集中在业务Js和图片
   + Style & Layout占用了6s，Script Evaluation4s
-  
+解决方案：
+  + 图片列表使用虚拟列表技术。
+  + 懒加载还是有性能体验问题，对于大体量的业务组件，可以使用preFetch手段。
+经过 performance分析
+  + 卡片列表项有很长的longtask，高达8s，结合代码分析，公司的基础懒加载组件占据30ms，300*30ms那就是3s长任务计算。
+  + 使用虚拟列表进行替换懒加载。
+最后的指标 LCP变为3s左右,TTI变为3.5左右
